--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "author": "Daniel Mattox <dmattox10@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.10",
     "knex-cleaner": "^1.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
